"""Bazel targets for the darkmap static-projection snapshot unit-test slice."""

load("@npm//:vitest/package_json.bzl", vitest = "bin")

# static-snapshot.ts validates/hashes plain JSON objects — no DOM, no
# cross-package imports.
filegroup(
    name = "projection_srcs",
    srcs = glob(["*.ts"]),
)

vitest.vitest_test(
    name = "projection_test",
    data = [
        ":projection_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/projection/static-snapshot.test.ts",
    ],
    log_level = "info",
    tags = [
        # flywheel-eligible: --config=flywheel-executor's tag filter dispatches
        # only targets carrying this tag; without it the executor config matched
        # zero targets (a silent no-op). Cache mode (--config=flywheel) ignores
        # tag filters, so this does not change the current cache-backed CI.
        "flywheel-eligible",
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
