"""Bazel targets for the darkmap transmission slant-path unit-test slice."""

load("@npm//:vitest/package_json.bzl", vitest = "bin")

# Typecheck (deferred, matching the atmospheric slice): these sources import
# `$lib/ephemeris/...` as VALUES, so a ts_project here would pin --rootDir to
# this directory and trip TS6059 on the staged cross-package ephemeris sources.
# The vitest_test below earns RBE coverage; the repo-wide `pnpm run check`
# (svelte-check) is the typecheck source of truth for these files.

filegroup(
    name = "transmission_srcs",
    srcs = glob(["*.ts"]) + [
        "//src/lib/ephemeris:airmass",
        "//src/lib/ephemeris:horizon_at_azimuth",
    ],
)

vitest.vitest_test(
    name = "transmission_test",
    data = [
        ":transmission_srcs",
        "//:node_modules",
        "//:package_json",
        "//:vitest_bazel_config",
        "tsconfig.bazel.json",
    ],
    args = [
        "run",
        "--reporter=verbose",
        "--config",
        "vitest.bazel.config.ts",
        "src/lib/transmission/slant-geometry.test.ts",
        "src/lib/transmission/look-angle.test.ts",
    ],
    log_level = "info",
    tags = [
        # flywheel-eligible: --config=flywheel-executor's tag filter dispatches
        # only targets carrying this tag; without it the executor config matched
        # zero targets (a silent no-op). Cache mode (--config=flywheel) ignores
        # tag filters, so this does not change the current cache-backed CI.
        "flywheel-eligible",
        "gloriousflywheel-cache-candidate",
        "vitest",
    ],
    visibility = ["//visibility:public"],
)
